--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-virtualized-auto-sizer": "^1.0.24",
+    "react-virtuoso": "^4.7.4",
     "react-window": "^1.8.10",
     "react-window-infinite-loader": "^1.0.9",
     "typescript": "^4.9.5",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/react-window": "^1.8.8"
   }
